--- a/templates/stats/global.html
+++ b/templates/stats/global.html
@@ -51,7 +51,7 @@
                 <div class="row padding-bottom-sm" id="task-date-row">
                     <div class="col-xs-12">
                         <div class="white-rounded inset-shadow-white chart">
-                            <h4 class="text-center padding-bottom-sm">Contributions and Completed Tasks per Day</h4>
+                            <h4 class="text-center padding-bottom-sm">Contributions and Tasks Completed per Day</h4>
                             <div id="task-date-chart">
                                 <canvas id="task-date" style="max-height:300px;"></canvas>
                             </div>
@@ -131,7 +131,7 @@
                 <div class="row padding-bottom-sm">
                     <div class="col-xs-12">
                         <div class="white-rounded inset-shadow-white text-center chart">
-                            <h4 class=" padding-bottom-sm">Locations of Anonymous Users</h4>
+                            <h4 class=" padding-bottom-sm">Locations of Active Volunteers</h4>
                             <div id="map" style="height:480px;"></div>
                         </div>
                     </div>
