--- a/templates/stats/global.html
+++ b/templates/stats/global.html
@@ -32,7 +32,7 @@
                 <div class="row padding-bottom-sm">
                     <div class="col-xs-12">
                         <div class="white-rounded inset-shadow-white chart">
-                            <h3 class="text-center"><span class="check-plural" data-num="{{stats.n_total_users}}" data-noun="volunteer"></span> have participated in <span class="check-plural" data-num="{{stats.n_published_projects}}" data-noun="project"></span>, made <span class="check-plural" data-num="{{stats.n_task_runs}}" data-noun="contribution"></span> and completed <span class="check-plural" data-num="{{stats.n_tasks_completed}}" data-noun="task"></span></h3>
+                            <h3 class="text-center"><span class="check-plural" data-num="{{stats.n_active_users}}" data-noun="volunteer"></span> have participated in <span class="check-plural" data-num="{{stats.n_published_projects}}" data-noun="project"></span>, made <span class="check-plural" data-num="{{stats.n_task_runs}}" data-noun="contribution"></span> and completed <span class="check-plural" data-num="{{stats.n_tasks_completed}}" data-noun="task"></span></h3>
                         </div>
                     </div>
                 </div>
