Leaderboard button added

--- a/templates/stats/global.html
+++ b/templates/stats/global.html
@@ -45,6 +45,9 @@
                                 <canvas id="top-users-alltime" style="max-height:300px;"></canvas>
                             </div>
                         </div>
+                        <div class="text-center padding-top-xs text-center">
+                            <a class="btn btn-danger" href="{{url_for('leaderboard.index')}}">View Leaderboard</a>
+                        </div>
                     </div>
                 </div>
                 
