--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -21,7 +21,7 @@
     <section class="white">
         <div class="container container-padded">
             <div class="col-md-11 padding-bottom-sm">
-                <h2>Featured Project: Convert-a-Card</h2>
+                <h2>Featured Project Series: Convert-a-Card</h2>
 			
                 In our first project series, Convert-a-Card, we're experimenting with a new method for transforming printed card catalogues into electronic records for inclusion in our online catalogue <a href="http://explore.bl.uk/">Explore</a>.</p>
                 
@@ -67,10 +67,9 @@
             <div class="col-md-11 padding-top-xs padding-bottom-sm">
                 <h2>{{ _('Contact information') }}</h2>
                 <ul>
-                    <li>For more info, email: <a href="mailto:info@libcrowds.com">info@libcrowds.com</a></li>
-                    <li>Report any bugs, issues or suggest improvements
-                    <a href="https://github.com/alexandermendes/BL-pybossa-theme/issues">here</a>
-                    </li>            
+                    <li>Visit the <a href="http://community.libcrowds.com">LibCrowds Community</a> for more information or to report any issues.</li>
+                    <li>Alternatively, you can email <a href="mailto:info@libcrowds.com">info@libcrowds.com</a></li>
+                    <li>Issues relating to the <a href="https://github.com/alexandermendes/BL-pybossa-theme">LibCrowds theme</a> can also be raised via GitHub</li>         
                 </ul>
             </div>
         </div>
