--- a/templates/account/_helpers.html
+++ b/templates/account/_helpers.html
@@ -75,14 +75,16 @@
             {% if private %}
                 <p><i class="fa fa-key"></i> {{ _('API Key') }}: {{user.api_key}}</p>
                 
-                <a href="{{ url_for('account.update_profile', name=user.name) }}" class="btn btn-default btn-sm btn-padded"><i class="fa fa-user"></i> {{ _('Edit') }}</a>
-                {% if (user.valid_email == False) %}
-                  {% if (user.confirmation_email_sent == False) %}
-                  <a href="{{ url_for('account.confirm_email')}}" class="btn btn-danger">Validate email</a>
-                  {% else %}
-                  <a href="#" class="label label-success disabled">Email sent for validation</a>
-                  {% endif %}
-                {% endif %}
+                <div class="text-center">
+                    <a href="{{ url_for('account.update_profile', name=user.name) }}" class="btn btn-default btn-sm btn-padded"><i class="fa fa-pencil-square-o"></i> {{ _('Edit') }}</a>
+                    {% if (user.valid_email == False) %}
+                      {% if (user.confirmation_email_sent == False) %}
+                      <a href="{{ url_for('account.confirm_email')}}" class="btn btn-danger">Validate email</a>
+                      {% else %}
+                      <a href="#" class="label label-info">Email sent for validation</a>
+                      {% endif %}
+                    {% endif %}
+                </div>
             {% endif %}
         </div>
     </div>
