--- a/templates/projects/_helpers.html
+++ b/templates/projects/_helpers.html
@@ -123,14 +123,11 @@
                 <div id="data" class="col-sm-6 col-xs-10 col-xs-offset-1 col-sm-offset-0">
                     <h2 class="text-center-xs"><a href="{{ url_for('project.details', short_name = project.short_name) }}">{{ project.name }}</a></h2>
                     <p>{{ project.description }}</p>
+                {% if active_cat != "draft" %}
+                    <div class="text-center"><a class="btn btn-danger margin-top-xs" href="{{ url_for('project.presenter', short_name = project.short_name) }}">{{ _('Contribute') }}</a></div>
+                {% endif %}
                 </div>
             </div>
-        </div>
-        
-        <div class="row hidden-md hidden-lg text-center">
-        {% if active_cat != "draft" %}
-            <p><a class="btn btn-danger margin-top-xs" href="{{ url_for('project.presenter', short_name = project.short_name) }}">{{ _('Contribute') }}</a></p>
-        {% endif %}
         </div>
         
             <div class="col-md-1 hidden-sm hidden-xs same-size">
