--- a/templates/stats/global.html
+++ b/templates/stats/global.html
@@ -542,15 +542,16 @@ $(function(){
         {% endif %}
         
     //Hourly chart
-    var houreyLabels = [];
-    var houreyData = [];
-    {% for hour in hourly_activity %}
-        houreyLabels.push('{{hour.h}}');
-        houreyData.push(parseInt({{hour.count}}));
-    {% endfor %}
+    var hourlyActivity = {{hourly_activity|safe}};
+    var hourlyLabels = [];
+    var hourlyCount = [];
+    for(var i = 0; i < hourlyActivity.length; i++) {
+        hourlyLabels.push(formatHours(hourlyActivity[i][0]));
+        hourlyCount.push(hourlyActivity[i][1]);
+    }
     
     var data = {
-        labels: houreyLabels,
+        labels: hourlyLabels,
         datasets: [
             {
                 label: "Hourly Activity",
@@ -560,7 +561,7 @@ $(function(){
                 pointStrokeColor: "#fff",
                 pointHighlightFill: "#fff",
                 pointHighlightStroke: "rgba(151,187,205,1)",
-                data: houreyData
+                data: hourlyCount
             }
         ]
     };
@@ -570,6 +571,14 @@ $(function(){
     var opts = {pointHitDetectionRadius : 1,tooltipTemplate: "<%if(label)\u007B%><%=label%> : <%}%><%=value%> <%if(value != 1)\u007B%>contributions<%}else\u007B%>contribution<%}%>"};
     var hourlyChart = new Chart(ctx).Line(data, opts);
     hourlyChart.draw();
+    
+    function formatHours(str) {
+        str += ':00'
+        if (str.length < 5) {
+            str = '0' + str;
+        }
+        return str;
+    }
 });
 </script>
 {% endblock %}
