--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -6,9 +6,9 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-          <var id="logo-black" data-src="{{url_for('static',filename='img/default_logo.png')}}"></var>
-          <var id="logo-white" data-src="{{url_for('static',filename='img/default_logo_white.png')}}"></var>
-          <a class="navbar-brand" href="{{ url_for('home.home') }}"><img id="navbar-logo" src="{% if active_page == 'index' %}{{url_for('static',filename='img/default_logo_white.png')}} {% else %}{{url_for('static',filename='img/default_logo.png')}} {% endif %}" alt="{{brand}}" /></a>
+          <var id="logo-black" data-src="{{url_for('static',filename='img/logo-dark-50px.png')}}"></var>
+          <var id="logo-white" data-src="{{url_for('static',filename='img/logo-white-50px.png')}}"></var>
+          <a class="navbar-brand" href="{{ url_for('home.home') }}"><img id="navbar-logo" src="{{url_for('static',filename='img/logo-white-50px.png')}}" alt="{{brand}}" /></a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -30,7 +30,7 @@
                     <li class="nav-link"><a href="{{ url_for('admin.index') }}"><i class="fa fa-cog"></i> {{ _('Admin') }}</a></li>
                     {% endif %}
                     <li class="divider"></li>
-                  <li class="nav-link"><a href="{{ url_for('account.signout') }}"><i class="fa fa-power-off"></i> {{ _('Sign Out') }}</a></li>
+                  <li class="nav-link"><a href="{{ url_for('blplugin.signout') }}"><i class="fa fa-power-off"></i> {{ _('Sign Out') }}</a></li>
                 </ul>
               </li>
             </ul>
