Use crowdsourcing consistently

--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -11,7 +11,7 @@
                 <h1 class="inset-text-grey">About</h1>
                 
                 <p class="lead">{{brand}}, in association with <a href="http://labs.bl.uk/" target="_blank">BL Labs</a>, 
-                is a platform for hosting experimental crowd-sourcing projects aimed at making the diverse collections 
+                is a platform for hosting experimental crowdsourcing projects aimed at making the diverse collections 
                 held at the <a href="http://www.bl.uk" target="_blank">British Library</a> more readily available
                 to a wider audience. By participating in the projects here, you will have a direct impact on 
                 enabling future research at the Library.</p> 
@@ -45,10 +45,10 @@
                 <h2>{{ _('Technology') }}</h2>
                 
                 <p>{{ brand }} is built on top of <a href="http://docs.pybossa.com/"> PyBossa </a>, an open-source Python framework for the creation of
-                crowd-sourcing projects. To complement the PyBossa framework, a custom Flask
+                crowdsourcing projects. To complement the PyBossa framework, a custom Flask
                 <a href="https://github.com/alexandermendes/BL-pybossa-plugin" target="_blank">plugin</a> is used to handle certain {{brand}} specific
                 features. The {{brand}} <a href="https://github.com/alexandermendes/BL-pybossa-theme" target="_blank">theme</a> is written primarily
-                in HTML5, CSS3 and JavaScript, as are the individual crowd-sourcing projects. Both the 
+                in HTML5, CSS3 and JavaScript, as are the individual crowdsourcing projects. Both the 
                 <a href="https://github.com/alexandermendes/BL-pybossa-theme" target="_blank">theme</a> and
                 <a href="https://github.com/alexandermendes/BL-pybossa-plugin" target="_blank">plugin</a> are open-source and any
                 suggestions or contributions are welcome.</p>
