--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -6,7 +6,7 @@
 <div class="splash" id="home-splash">
   <div class="splash-overlay vcenter hcenter">
     <div class="container text-center ie-vcenter padding-top">
-      <h1>Crowd-sourcing from <br />the British Library</h1>
+      <h1>Crowdsourcing from <br />the British Library</h1>
         <div class="col-sm-12">
             <div data-anchor="#intro" class="btn btn-circle anchor-btn">
               <a>
@@ -27,7 +27,7 @@
           <h2 class="inset-text-grey">What's this all about?</h2>
             <p class="lead">
                {{brand}}, in association with <a href="http://labs.bl.uk/" target="_blank">BL Labs</a>, is a platform for 
-               hosting experimental crowd-sourcing projects aimed at making the diverse collections held at the 
+               hosting experimental crowdsourcing projects aimed at making the diverse collections held at the 
                British Library more readily available to a wider audience. Your participation will have a direct 
                impact on enabling future research at the Library.
             </p>
