--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -6,9 +6,9 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-          <var id="logo-black" data-src="{{url_for('static',filename='img/logo-dark-small.png')}}"></var>
-          <var id="logo-white" data-src="{{url_for('static',filename='img/logo-white-small.png')}}"></var>
-          <a class="navbar-brand" href="{{ url_for('home.home') }}"><img id="navbar-logo" src="{{url_for('static',filename='img/logo-white-small.png')}}" alt="{{brand}}" /></a>
+          <var id="logo-black" data-src="{{url_for('static',filename='img/logo-dark-plain.png')}}"></var>
+          <var id="logo-white" data-src="{{url_for('static',filename='img/logo-white-plain.png')}}"></var>
+          <a class="navbar-brand" href="{{ url_for('home.home') }}"><img id="navbar-logo" src="{{url_for('static',filename='img/logo-white-plain.png')}}" alt="{{brand}}" /></a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
