Added player and functions for project videos

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,8 +18,7 @@
     <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='css/styles.css')}}?v=2.5.0">
     <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400">
     <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Permanent+Marker">
-    <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='vendor/fancybox/source/jquery.fancybox.css')}}?v=2.1.5" media="screen" />
-    <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='vendor/fancybox/source/helpers/jquery.fancybox-thumbs.css')}}?v=1.0.7" media="screen" />
+    <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='vendor/lightgallery/css/lightGallery.css')}}" media="screen" />
     
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -46,10 +45,7 @@
     <script type="text/javascript" src="{{url_for('static', filename='vendor/bootstrap-3.3.2/js/bootstrap.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='vendor/modernizr.min.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='vendor/browser-detection.js')}}" ></script>
-    <script type="text/javascript" src="{{url_for('static', filename='vendor/fancybox/lib/jquery.mousewheel-3.0.6.pack.js')}}"></script>
-    <script type="text/javascript" src="{{url_for('static', filename='vendor/fancybox/source/jquery.fancybox.pack.js')}}?v=2.1.5""></script>
-    <script type="text/javascript" src="{{url_for('static', filename='vendor/fancybox/source/helpers/jquery.fancybox-thumbs.js')}}?v=1.0.7"></script>
-    
+    <script type="text/javascript" src="{{url_for('static', filename='vendor/lightgallery/js/lightGallery.min.js')}}"></script>
   
     <!-- Google Analytics or similar solutions -->
     {% include '_ga.html' ignore missing %}
