--- a/templates/projects/update_project.html
+++ b/templates/projects/update_project.html
@@ -27,11 +27,11 @@
                                 </div>
                             </div>
                         </div>
-                      {{ form_helper.render_field(upload_form.avatar, onchange="loadPreview()", class="form-control hidden") }}
-                      {{ upload_form.x1 }}
-                      {{ upload_form.y1 }}
-                      {{ upload_form.x2 }}
-                      {{ upload_form.y2 }}
+                      {{ form_helper.render_field(upload_avatar_form.avatar, onchange="loadPreview()", class="form-control hidden") }}
+                      {{ upload_avatar_form.x1 }}
+                      {{ upload_avatar_form.y1 }}
+                      {{ upload_avatar_form.x2 }}
+                      {{ upload_avatar_form.y2 }}
                       <div id="modal" class="modal fade">
                         <div class="modal-dialog img-dialog">
                             <div class="modal-content">
@@ -41,7 +41,7 @@
                                 
                                 <div class="modal-footer">
                                     <div class="form-actions text-center">
-                                        <button type="submit" id="upload-btn" name='btn' value="Upload" class="btn btn-primary btn-lg" >{{ _('Upload') }}</button>
+                                        <button type="submit" id="upload-btn" name='btn' value="Upload Avatar" class="btn btn-primary btn-lg" >{{ _('Upload') }}</button>
                                     </div>
                                 </div>
                             </div>
@@ -70,7 +70,6 @@ You can use Markdown to format your description.'), class="form-control", requir
                 {{ form_helper.render_field(form.password, class="form-control", visible='true') }}
                 {{ form_helper.render_field(form.webhook, class="form-control", visible='true') }}
                 {{ form_helper.render_field(form.flickr_link, class="form-control", visible='true') }}
-                {{ form_helper.render_field(form.image_set, class="form-control", visible='true',  accept=".zip") }}
                 {{ form_helper.render_field(form.required_matches, class="form-control", visible='true') }}
                 {{ form_helper.render_field_horizontal(form.hidden) }}
                 <div role="group" class="pull-right">
@@ -78,6 +77,26 @@ You can use Markdown to format your description.'), class="form-control", requir
                   <button type="submit" name="btn" value="Save the changes" class="btn btn-danger">{{_('Save')}}</button>
                 </div>
               </fieldset>
+            </form>
+            
+            <form method="post" class="padding-top-xs" action="{{ url_for('blplugin.update_project', short_name=project.short_name) }}" enctype="multipart/form-data">
+                <fieldset>
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+                    {{ form_helper.render_field(upload_imageset_form.image_set, class="form-control", visible='true',  accept=".zip") }}
+                    <div role="group" class="pull-right">
+                        <button type="submit" name="btn" value="Upload Image Set" class="btn btn-success">{{_('Upload')}}</button>
+                    </div>
+                </fieldset>
+            </form>
+              
+            <form method="post" class="padding-top-xs" action="{{ url_for('blplugin.update_project', short_name=project.short_name) }}" enctype="multipart/form-data">
+                <fieldset>
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+                    {{ form_helper.render_field(upload_video_form.video, class="form-control", visible='true',  accept=".mp4") }}
+                    <div role="group" class="pull-right">
+                        <button type="submit" name="btn" value="Upload Video" class="btn btn-success">{{_('Upload')}}</button>
+                    </div>
+                </fieldset>
             </form>
           </div>
         </div>
